
	* scripts/lilypond-invoke-editor.scm (dissect-uri): add char. 

	* ttftool/util.c (syserror): use errno for better error reporting.

	* lily/source-file.cc (get_counts): new function. Calc column,
	line and char count in one go.

	* lily/binary-source-file.cc (quote_input): rename to quote_input

	* lily/input.cc (set): new function.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (prepend_env_path): Bugfix: Check directory
	existence before appending original path.

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ttftool/parse.c (readNamingTable): verbosity for "bad TTF
	file" massage.

	* Documentation/user/GNUmakefile (TEXINPUTS): set TEXINPUTS so our
	texinfo.tex is always used.
	
2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/axis.hh: rename from axes.hh

	* lily/include/text-interface.hh (Module): rename from text-item.hh

	* VERSION (PATCH_LEVEL): release 2.5.29

	* ttftool/parse.c (readNamingTable): handle Apple/8bit encoding too.

	* scm/framework-ps.scm (font-file-as-ps-string): new function.
	(handle-macfont): new function. Call fondu for Native mac fonts.

	* scm/define-markup-commands.scm (fill-line): handle text-widths =
	'() case.

2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/ps-to-png.scm (make-ps-images): Bugfix: `Pages: 1\n' is not
	multi-page.  Fix .eps regular expression.

2005-06-07  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/putting.itely: add info on modifying templates.

	* Documentation/user/lilypond.itely, converters.itely, invoking.itely:
	misc small changes.

2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/ps-to-png.scm (make-ps-images): no paper size for multi-page.

	* scripts/lilypond-ps2png.scm

	* VERSION (PACKAGE_NAME): release 2.5.28

2005-06-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (prepend_env_path): Do not append /, that does not
	work.  Localedir lives in datadir, not in prefix.
