@@ -15,6 +15,12 @@
 
 2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* flower/file-path.cc (find): Bugfix.  Append rather than prepend
+	directory part of file name to search directory.
+
+	* lily/lily-parser-scheme.cc (ly:parse-file): Prepend cwd to
+	search path and chdir to DIR if --outname=DIR used.
+
 	* lily/main.cc (prepend_env_path): Bugfix: Check directory
 	existence before appending original path.
 
